--- a/index.html
+++ b/index.html
@@ -445,20 +445,12 @@
         CABEZA<br />DE CARTEL.
       </h3>
       <a
-        href="documents/PROGRA-1.pdf"
+        href="docs/PROGRA-1.pdf"
         target="_blank"
         class="download-link w-inline-block"
       >
         <h4 class="download-item">DESCARGA  EL  PROGRAMA</h4>
         <div class="button-circle"></div>
-        <!-- <img
-          src="images/yeka.jpg"
-          loading="lazy"
-          sizes="(max-width: 600px) 100vw, 600px"
-          srcset="images/yeka-p-500.jpg 500w, images/yeka.jpg 600w"
-          alt="Degradado de color decorativo"
-          class="download-img"
-        /> -->
       </a>
     </section>
     <section id="prog" class="program__section">
