--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@
         href="docs/ProgramacionDerivaJazz2026.pdf"
         target="_blank"
         class="download-link w-inline-block"
+        download="ProgramacionDerivaJazz2026.pdf"
       >
         <h4 class="download-item">DESCARGA  EL  PROGRAMA</h4>
         <div class="button-circle"></div>
