--- a/index.html
+++ b/index.html
@@ -931,7 +931,10 @@
         if (!targetEl) return;
 
         e.preventDefault();
-        lenis.scrollTo(targetEl);
+        lenis.scrollTo(targetEl, {
+          duration: 4.5, // seconds (increase for slower)
+          easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
+        });
       });
     </script>
   </body>
