--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
         </h5>
         <h5 class="footer-text">
           MINI-WEB  HECHA  CON  <br />MUCHO  CARIÑO  POR  <a
-            href="https://illysito.webflow.io/"
+            href="https://illyalukianov.com/"
             target="_blank"
             class="footer-link"
             ><span class="is--bold">ILLY</span></a
