--- a/index.html
+++ b/index.html
@@ -904,6 +904,13 @@
     </div>
     <script type="module" src="./src/main.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@0.2.28/bundled/lenis.js"></script>
+    <!-- Cloudflare Web Analytics -->
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "985fa6b824d04f48ab84abc134e5afa2"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
     <script>
       const lenis = new Lenis({
         duration: 2,
